--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,8 +3,7 @@ title: Welcome to Middleman
 ---
 
 <div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
+  <h1>Middleman Feat. Backbone</h1>
+  <ul id="notes"></ul>
+  <button id="my-button">Reset</button>
 </div><!-- .welcome -->
