Author: Cole Commit: Display, fetch and reset settings now work

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,5 +5,5 @@ title: Welcome to Middleman
 <div class="welcome">
   <h1>Middleman Feat. Backbone</h1>
   <ul id="notes"></ul>
-  <button id="my-button">Reset</button>
+  <button id="my-button">Reset &amp; Fetch</button>
 </div><!-- .welcome -->
