Author: Cole Commit: Update styling to be totally WORD TAOG.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,10 @@
 ---
 title: Welcome to Middleman
 ---
-
-<div class="welcome">
-  <h1>Middleman Feat. Backbone</h1>
-  <ul id="notes"></ul>
-  <button id="my-button">Reset &amp; Fetch</button>
-</div><!-- .welcome -->
+<div id="container">
+  <div class="welcome">
+    <h1>Middleman Feat. Backbone</h1>
+    <ul id="notes"></ul>
+    <button id="my-button" class="btn">Reset &amp; Fetch</button>
+  </div><!-- .welcome -->
+</div>
